# Dabba-DB

./: LICENSE.MD  README.md
database-client/: README.md
database-client-python/: README.md  pyproject.toml
database-client-python/sqlite_phone_client/: __init__.py  connection.py
database-client/spec/: api_spec.md
database-client/sqlite_phone_client/: pool.py
database-mobile-app/: pubspec.yaml
database-mobile-app/android/app/: build.gradle.kts
database-mobile-app/android/app/src/main/: AndroidManifest.xml
database-mobile-app/android/app/src/main/kotlin/com/example/sqlite_phone_app/: MainActivity.kt
database-mobile-app/lib/: main.dart
database-mobile-app/lib/database/: data_db_helper.dart
database-mobile-app/lib/server/: websocket_server.dart
database-mobile-app/lib/ui/: home_screen.dart  settings_screen.dart
sqlite_phone_app/: README.md
sqlite_phone_app/lib/: main.dart
sqlite_phone_app/lib/database/: database_helper.dart
sqlite_phone_app/lib/models/: user.dart
sqlite_phone_app/lib/ui/: home_screen.dart  users_screen.dart
sqlite_phone_app/test/: widget_test.dart
