[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dabba-db-client"
version = "0.1.0"
description = "A Python client with connection pooling for the SQLite Phone App WebSocket server."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "websockets>=11.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["dabba_db_client"]
